# spoorthi_sales_dashboard

./: .gitignore  README.md  docker-compose.yml
.github/: copilot-instructions.md
backend/: .env  .gitignore  Dockerfile  insert_dummy_user.sql  pyproject.toml  requirement.txt
backend/app/: database.py  main.py  schemas.py
backend/app/auth/: utils.py
backend/app/crud/: __init__.py  users.py
backend/app/endpoints/: abc.py  article_behaviour.py  auth.py  cba.py  cross_sell.py  customer_behaviour.py  customer_class_comparison.py  customer_comparison.py  customer_product.py  customer_trend.py  dashboard.py  forecast.py  masters.py  product_behaviour.py  ticket_size.py  top_performance.py  transition_analysis.py
backend/app/middleware/: logging.py
frontend/: .env  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  index.ts  types.ts
frontend/src/components/: ProtectedRoute.tsx  Sidebar.tsx
frontend/src/constants/: constants.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: ABCAnalysis.tsx  CBA.tsx  CampaignAnalysis.tsx  CrossSell.tsx  CustomerBehaviour.tsx  CustomerClassComparison.tsx  CustomerComparison.tsx  CustomerProduct.tsx  CustomerTrend.tsx  Dashboard.tsx  ExportData.tsx  Forecast.tsx  Login.tsx  ProductBehaviour.tsx  ProductBehaviour_old.tsx  TicketSize.tsx  TopPerformance.tsx  TransitionAnalysis.tsx  TrendAnalysis.tsx
frontend/src/services/: api.ts
frontend/src/theme/: ThemeProvider.tsx  (+1 more)
(+1 files in other folders)
