[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "pandas>=2.3.3",
    "psycopg-binary[standard]>=3.2.12",
    "python-dotenv[standard]>=1.2.1",
    "uvicorn[standard]>=0.38.0",
]
