[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "logging>=0.4.9.6",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.38.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
]
